added search box and h1

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	
-	<title>
-	
+	<title>WEATHER</title>
 </head>
+	<h1>Weather App</h1>
+<body>
+	<input type="text" name="search" placeholder="City or Zip Code">
+</body>
 </html>
