adding city search and onclick event

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 	<h1>Weather App</h1>
 <body>
-	<input type="text" name="search" placeholder="City or Zip Code">
+	<input type="text" name="city" name="search" placeholder="City or Zip Code">
+	<button id="submitWeather" class="btn btn primary">Search</button>
 </body>
 </html>
