--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 	<h1>Weather App</h1>
 <body>
+
+	<span id="error"></span>
 	<input type="text" name="city" name="search" placeholder="City or Zip Code">
 	<button id="submitWeather" class="btn btn primary">Search</button>
 </body>
