working on weather js and adding api ish

--- a/index.html
+++ b/index.html
@@ -12,4 +12,6 @@
 	<input type="text" name="city" name="search" placeholder="City or Zip Code">
 	<button id="submitWeather" class="btn btn primary">Search</button>
 </body>
+
+<script> src="js/weather.js"</script>
 </html>
