still attempting to correctly use an api

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 	<h1>Weather App</h1>
 <body>
-
+ <p>Be sure to look for weather API</p>
 	<span id="error"></span>
 	<input type="text" name="city" name="search" placeholder="City or Zip Code">
 	<button id="submitWeather" class="btn btn primary">Search</button>
