linked main.js, but location and weather functions are not working

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 		<p>Be sure to look for weather API</p>
 			<span id="error"></span>
 			<input type="text" name="city" name="search" placeholder="City or Zip Code">
-			<button id="getWeather()" class="btn btn primary">Search</button>
+			<button id="getWeather" class="btn btn primary">Search</button>
 	</div>
 </body>
 
 <script> src="js/weather.js"</script>
+<script> src-"js/main.js"</script>
 </html>
