--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	
-	<title>WEATHER</title>
+	<title>Rosie's Weather App</title>
 </head>
 	
 	<h1>Weather App</h1>
