--- a/index.html
+++ b/index.html
@@ -12,19 +12,20 @@
 	<header><h1>Weather App</h1></header>
 	
 	<h2>Onde voce esta?</h2>
-		<div class="third"><img src="/toys1.jpg" alt="Circuit boards"/></div>
-		<div class="third" id="loc">We are trying to find your location"</div>
+		<!-- <div class="third"><img src="/toys1.jpg" alt="Circuit boards"/></div> -->
+		<!-- <div class="third" id="loc">We are trying to find your location"</div> -->
+		<!-- <div class="third"><img="img/toys2.jpg" alt="Circuit boards" /></div> -->
 		
 		
 		
-  <!-- original code from book; above from online updated version -->
-	<!-- <div class="containter"> -->
-		<!-- <i class="fa fa-sun-o" aria-hidden="true"></i> -->
-		<!-- <p>Be sure to look for weather API</p> -->
-			<!-- <span id="error"></span> -->
-			<!-- <input type="text" name="city" name="search" placeholder="City or Zip Code"> -->
-			<!-- <button id="getWeather" class="btn btn primary">Search</button> -->
-	<!-- </div> -->
+  
+	<div class="containter">
+		 <i class="fa fa-sun-o" aria-hidden="true"></i> 
+		 <p>Be sure to look for weather API</p>
+			 <span id="error"></span> 
+			 <input type="text" name="city" name="search" placeholder="City or Zip Code">
+			<button id="getWeather" class="btn btn primary">Search</button>
+	 </div>
 </body>
 
 <script> src="js/weather.js"</script>
