added updated geolocation code; no issues in IE

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 	<header><h1>Weather App</h1></header>
 	
 	<h2>Onde voce esta?</h2>
-		<!-- <div class="third"><img src="/toys1.jpg" alt="Circuit boards"/></div> -->
-		<!-- <div class="third" id="loc">We are trying to find your location"</div> -->
-		<!-- <div class="third"><img="img/toys2.jpg" alt="Circuit boards" /></div> -->
+		<div class="third"><img src="/toys1.jpg" alt="Circuit boards"/></div> 
+		 <div class="third" id="loc">We are trying to find your location"</div>
+		 <div class="third"><img="img/toys2.jpg" alt="Circuit boards" /></div>
 		
 		
 		
