added modernizr to html and unneeded imgs

--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 <body>
 	<header><h1>Weather App</h1></header>
 	
-	<h2>Onde voce esta?</h2>
-		<div class="third"><img src="/toys1.jpg" alt="Circuit boards"/></div> 
-		 <div class="third" id="loc">We are trying to find your location"</div>
-		 <div class="third"><img="img/toys2.jpg" alt="Circuit boards" /></div>
+	<h2>Onde voce esta?</h2> 
+		 <div class="third" id="loc">"[object positionError</div>
 		
 		
 		
@@ -28,6 +26,8 @@
 	 </div>
 </body>
 
-<script> src="js/weather.js"</script>
-<script> src-"js/main.js"</script>
+<!-- Noted this to see if modernizer works -->
+<!-- <script> src="js/weather.js"</script> -->
+<script> src="js/modernizr.js"</script>
+<script> src-"js/geolocation.js"</script>
 </html>
