noted weather code and primarily working on geolocation to ensure it works properly

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 	<header><h1>Weather App</h1></header>
 	
 	<h2>Onde voce esta?</h2> 
-		 <div class="third" id="loc">"[object positionError</div>
+		 <div class="third" id="loc"></>
 		
 		
 		
-  
-	<div class="containter">
-		 <i class="fa fa-sun-o" aria-hidden="true"></i> 
-		 <p>Be sure to look for weather API</p>
-			 <span id="error"></span> 
-			 <input type="text" name="city" name="search" placeholder="City or Zip Code">
-			<button id="getWeather" class="btn btn primary">Search</button>
-	 </div>
+	<!-- Need to work on getting geolocation first -->
+	<!-- <div class="containter"> -->
+		 <!-- <i class="fa fa-sun-o" aria-hidden="true"></i>  -->
+		 <!-- <p>Be sure to look for weather API</p> -->
+			 <!-- <span id="error"></span>  -->
+			 <!-- <input type="text" name="city" name="search" placeholder="City or Zip Code"> -->
+			<!-- <button id="getWeather" class="btn btn primary">Search</button> -->
+	 <!-- </div> -->
 </body>
 
 <!-- Noted this to see if modernizer works -->
