IE is recognizing geolocation, but there is no prompt. Chrome does not recognize geolocation

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<header><h1>Weather App</h1></header>
 	
 	<h2>Onde voce esta?</h2> 
-		 <div class="third" id="loc"></>
+		 <button onclick="findLocation()" class="third" id="loc"> Find Location</>
 		
 		
 		
