still not working

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	
-	<title>Rosie's Weather App</title>
-</head>
+	<!-- <title>Rosie's Weather App</title> -->
+<!-- </head> -->
 	
-<body>
-	<header><h1>Weather App</h1></header>
+<!-- <body> -->
+	<!-- <header><h1>Weather App</h1></header> -->
 	
-	<h2>Onde voce esta?</h2> 
-		 <button onclick="findLocation()" class="third" id="loc"> Find Location</>
+	<!-- <h2>Onde voce esta?</h2>  -->
+		 <button onclick="findLocation()"> Find Location</button>
+		 <p id="loc"></p>
 		
 		
 		
@@ -24,10 +25,10 @@
 			 <!-- <input type="text" name="city" name="search" placeholder="City or Zip Code"> -->
 			<!-- <button id="getWeather" class="btn btn primary">Search</button> -->
 	 <!-- </div> -->
-</body>
+<!-- </body> -->
 
 <!-- Noted this to see if modernizer works -->
 <!-- <script> src="js/weather.js"</script> -->
 <script> src="js/modernizr.js"</script>
-<script> src-"js/geolocation.js"</script>
+<script> src="js/geolocation.js"</script>
 </html>
